# GDPack

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: colors.hpp  config.cpp  config.hpp  devmode.cpp  devmode.hpp  interface.cpp  interface.hpp  main.cpp  packman.cpp  packman.hpp  switcher.cpp  switcher.hpp  utils.cpp  utils.hpp
src/components/: config.cpp  config.hpp  interface.cpp  interface.hpp  pack.cpp  pack.hpp  packman.cpp  packman.hpp  switcher.cpp  switcher.hpp
src/types/: colors.hpp  configSettings.hpp  packageSettings.hpp
